--- a/event-proposal-page/src/components/User/Userhome.css
+++ b/event-proposal-page/src/components/User/Userhome.css
@@ -7,8 +7,6 @@
     background: #ffffff 0% 0% no-repeat padding-box;
     border-radius: 8px;
     opacity: 1;
-    z-index: 9;
-    font-size: small;
   }
   
   .top {
@@ -26,12 +24,12 @@
   }
   input {
     width: 90%;
-    height: 30px;
+    height: 40px;
     background: #ffffff 0% 0% no-repeat padding-box;
     border: 1px solid #d1d1d1;
     border-radius: 4px;
     opacity: 1;
-    font-size: small;
+    font-size: large;
     padding: 10px;
   }
   .input {
@@ -47,6 +45,7 @@
     opacity: 1;
     color: #ffffff;
     border: none;
+    
   }
   .forget {
     display: flex;
@@ -64,25 +63,20 @@
     font-size: large;
   }
   
-  .user {
-    text-decoration: none;
-  }
-  
-  .Logo {
+  .Logo{
     color: white;
     font-size: 32px;
     margin: 15px 40px;
-  }
-  
-  .Text {
+}
+
+.Text{
     color: white;
     font-size: 61px;
     position: absolute;
-    top: 240px;
+    top: 340px;
     left: 85px;
-  }
-  
-  .form-box-reg {
+}
+.form-box-reg {
     position: absolute;
     top: 123px;
     left: 1073px;
